--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -969,47 +969,62 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="ydX-In-cjV">
-                            <rect key="frame" x="0.0" y="64" width="320" height="200"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OQ4-Fu-3LC">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
-                                </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uZw-jx-fcp">
-                                    <rect key="frame" x="110" y="50" width="100" height="100"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="100" id="DoM-u3-QfR"/>
-                                        <constraint firstAttribute="height" constant="100" id="SqA-To-u6g"/>
-                                    </constraints>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c1R-pg-hQf">
-                                    <rect key="frame" x="10" y="163" width="300" height="23"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="c1R-pg-hQf" firstAttribute="top" secondItem="uZw-jx-fcp" secondAttribute="bottom" constant="13" id="55v-xh-IyO"/>
-                                <constraint firstItem="uZw-jx-fcp" firstAttribute="top" secondItem="OQ4-Fu-3LC" secondAttribute="top" constant="50" id="9EX-xB-bKb"/>
-                                <constraint firstItem="OQ4-Fu-3LC" firstAttribute="centerX" secondItem="c1R-pg-hQf" secondAttribute="centerX" id="Jnf-Ck-zeN"/>
-                                <constraint firstItem="uZw-jx-fcp" firstAttribute="centerX" secondItem="OQ4-Fu-3LC" secondAttribute="centerX" id="Msp-My-L7G"/>
-                                <constraint firstItem="c1R-pg-hQf" firstAttribute="leading" secondItem="ydX-In-cjV" secondAttribute="leading" constant="10" id="ZND-Bd-Bpv"/>
-                                <constraint firstItem="OQ4-Fu-3LC" firstAttribute="top" secondItem="ydX-In-cjV" secondAttribute="top" id="don-Th-oYH"/>
-                                <constraint firstAttribute="bottom" secondItem="OQ4-Fu-3LC" secondAttribute="bottom" id="oVI-mC-BfQ"/>
-                                <constraint firstItem="OQ4-Fu-3LC" firstAttribute="leading" secondItem="ydX-In-cjV" secondAttribute="leading" id="wtU-b9-zd1"/>
-                                <constraint firstAttribute="trailing" secondItem="c1R-pg-hQf" secondAttribute="trailing" constant="10" id="yrP-ah-Eql"/>
-                                <constraint firstAttribute="trailing" secondItem="OQ4-Fu-3LC" secondAttribute="trailing" id="zIk-p5-i8R"/>
-                            </constraints>
-                        </view>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ong-Dd-hZX">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackCell" rowHeight="55" id="sTN-do-E2R" customClass="TrackCell">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ong-Dd-hZX" id="b2q-2P-fio">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sTN-do-E2R" id="Abq-Mg-gc8">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChC-li-zuk">
+                                            <rect key="frame" x="63" y="31" width="187" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D70-KP-cOW">
+                                            <rect key="frame" x="63" y="9" width="197" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8WG-eX-fTF">
+                                            <rect key="frame" x="13" y="8" width="40" height="40"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="Jb3-se-cML"/>
+                                                <constraint firstAttribute="width" constant="40" id="ONf-bl-GZc"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ema-vR-meM">
+                                            <rect key="frame" x="268" y="13" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="YWO-3R-8In"/>
+                                                <constraint firstAttribute="height" constant="30" id="wOB-9W-z6y"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="AddMusicButton">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ema-vR-meM" firstAttribute="leading" secondItem="ChC-li-zuk" secondAttribute="trailing" constant="18" id="DP5-wE-4LL"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Ema-vR-meM" secondAttribute="trailing" constant="14" id="L0q-xO-W44"/>
+                                        <constraint firstAttribute="centerY" secondItem="Ema-vR-meM" secondAttribute="centerY" constant="-1" id="Ppb-RM-fCt"/>
+                                        <constraint firstAttribute="centerY" secondItem="D70-KP-cOW" secondAttribute="centerY" constant="7.5" id="SRc-Dc-PxX"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="8WG-eX-fTF" secondAttribute="bottom" constant="-2" id="Svf-Th-m8W"/>
+                                        <constraint firstItem="ChC-li-zuk" firstAttribute="top" secondItem="D70-KP-cOW" secondAttribute="bottom" constant="1" id="cTT-yU-5tE"/>
+                                        <constraint firstItem="8WG-eX-fTF" firstAttribute="top" secondItem="Abq-Mg-gc8" secondAttribute="topMargin" id="kP6-ta-DSo"/>
+                                        <constraint firstItem="8WG-eX-fTF" firstAttribute="leading" secondItem="Abq-Mg-gc8" secondAttribute="leadingMargin" constant="5" id="pJj-Lx-s0P"/>
+                                        <constraint firstItem="D70-KP-cOW" firstAttribute="leading" secondItem="8WG-eX-fTF" secondAttribute="trailing" constant="10" id="tj5-L3-gGw"/>
+                                        <constraint firstItem="ChC-li-zuk" firstAttribute="trailing" secondItem="D70-KP-cOW" secondAttribute="trailing" constant="-10" id="xAz-ZR-WGq"/>
+                                        <constraint firstItem="D70-KP-cOW" firstAttribute="leading" secondItem="ChC-li-zuk" secondAttribute="leading" id="xZ9-a9-ROg"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="lbArtist" destination="ChC-li-zuk" id="ov5-jy-sVI"/>
+                                    <outlet property="lbTrack" destination="D70-KP-cOW" id="DVG-oI-mZO"/>
+                                    <outlet property="vwPlay" destination="8WG-eX-fTF" id="AnH-lU-9lB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -1018,12 +1033,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="uj6-Zi-Nyz"/>
-                    <connections>
-                        <outlet property="artistName" destination="c1R-pg-hQf" id="Ayf-5I-ONZ"/>
-                        <outlet property="artistPortrait" destination="uZw-jx-fcp" id="dRV-0d-Dd4"/>
-                        <outlet property="artistPortraitBackground" destination="OQ4-Fu-3LC" id="H7F-3j-Wcq"/>
-                        <outlet property="containerArtistPortrait" destination="ydX-In-cjV" id="b1R-BR-3al"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NIi-4g-uqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
