--- a/SpotifyAlarmClock/Views/BlurredHeader.xib
+++ b/SpotifyAlarmClock/Views/BlurredHeader.xib
@@ -11,10 +11,10 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Oa-7O-78z">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlurredHeader" translatesAutoresizingMaskIntoConstraints="NO" id="8Oa-7O-78z">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CwU-po-xhU">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ArtistPortrait" translatesAutoresizingMaskIntoConstraints="NO" id="CwU-po-xhU">
                     <rect key="frame" x="110" y="95" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="Bp6-lU-RzC"/>
@@ -39,4 +39,8 @@
             <point key="canvasLocation" x="140" y="139"/>
         </view>
     </objects>
+    <resources>
+        <image name="ArtistPortrait" width="278" height="278"/>
+        <image name="BlurredHeader" width="320" height="320"/>
+    </resources>
 </document>
