--- a/SpotifyAlarmClock/Views/Cells/AlbumCell.xib
+++ b/SpotifyAlarmClock/Views/Cells/AlbumCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -51,8 +50,8 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="albumImage" destination="QKv-qk-xgo" id="mJE-WI-hws"/>
-                <outlet property="lbAlbum" destination="GyR-xw-tye" id="Srp-KS-X0v"/>
-                <outlet property="lbArtist" destination="LAm-iS-yMd" id="fCI-o5-IJ4"/>
+                <outlet property="lbName" destination="LAm-iS-yMd" id="yLR-ab-HX1"/>
+                <outlet property="lbSubTitle" destination="GyR-xw-tye" id="UJn-Ql-kdF"/>
             </connections>
         </tableViewCell>
     </objects>
